<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LabTestBookActivity">
    <TextView
        android:id="@+id/LTBTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_health_care"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/TextViewLTBTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/please_fill_all_details_for_booking"
        android:textColor="@color/YellowLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTBTitle"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/LTBFullName"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewLTBTitle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/LTBAddress"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTBFullName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/LTBContact"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="text|number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTBPinCode"
        android:autofillHints="" />

    <EditText
        android:id="@+id/LTBPinCode"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/pin_code"
        android:inputType="text|number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTBAddress"
        android:autofillHints="" />

    <Button
        android:id="@+id/LTBBook"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/input_bg"
        android:text="@string/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTBContact" />

</androidx.constraintlayout.widget.ConstraintLayout>